[package]
name = "back"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api_calls"
path = "src/api.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
axum-server = "0.7.1"
